[fix] misalignments

--- a/css/style.css
+++ b/css/style.css
@@ -120,13 +120,13 @@ html, body {
     content: "";
     border-radius: 50%;
     background-color: #fff;
-    margin-left: -34.05px;/* left: 5.6vh; */
+    margin-left: -34.5px;/* left: 5.6vh; */
 }
 
 .timeline-container .col .list-block-start::before {
     width: 10px;
     height: 10px;
-    margin-left: -36.05px;
+    margin-left: -36.1px;
     border: 5px solid #004385;
 }
 
